// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput rendering should render an input 1`] = `
<div
  className="form-group"
>
  <input
    className="input-name"
    id="name"
    name="name"
    onChange={[Function]}
    placeholder="title"
    type="text"
    value="foo"
  />
</div>
`;

exports[`TextInput rendering should render an input with a default value 1`] = `
<div
  className="form-group"
>
  <input
    className="input-name"
    id="name"
    name="name"
    onChange={[Function]}
    placeholder="title"
    type="text"
    value={undefined}
  />
</div>
`;

exports[`TextInput rendering should render an password input 1`] = `
<div
  className="form-group"
>
  <input
    className="input-name"
    id="name"
    name="name"
    onChange={[Function]}
    placeholder="title"
    type="password"
    value="foo"
  />
</div>
`;
